#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(a.out, 1.0)
AM_INIT_AUTOMAKE(subdir-objects)
AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])
CXXFLAGS="-pthread -O0 -g -W  -Werror -Wextra -std=c++11"


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
